--- a/modul3/css/style.css
+++ b/modul3/css/style.css
@@ -85,14 +85,14 @@ img {
     width: 63px;
     font-family: Ubuntu;
     font-size: 14px;
+    line-height: 17px;
     font-weight: 300;
     font-style: normal;
     font-stretch: normal;
     letter-spacing: normal;
     color: #b4ad9e;
     text-transform: uppercase;
-    margin-bottom: 50px;
-    margin-top: 26px;
+    margin-top: 31px;
   }
 .title {
     width: 407px;
@@ -105,7 +105,7 @@ img {
     color: #626262;
     text-transform:normal;
     margin-top: 26px;
-    margin-bottom: 50px;
+    line-height: 36px;
   }
 .text {
     width: 414px;
