--- a/modul4/css/styles.css
+++ b/modul4/css/styles.css
@@ -7,7 +7,7 @@ html {
     box-sizing: inherit;
   }
 body {
-   font-family: "Open Sans", sans-serif;
+   font-family: sans-serif;
    font-size: 18px;
    line-height: 26px;
   }
@@ -28,7 +28,6 @@ img {
   }
   /* My header*/
 .page-header {
-background-color: #ffffff;
 margin-top: 38px;
 margin-bottom: 88px;
 }
@@ -97,8 +96,92 @@ background-color: #1abc9c;
 .features-list-product{
     float: left;
     max-width: 255px;
-    background-color: #e9f0fd;
+    text-transform: uppercase;
     }
 .features-list-product:not(:nth-child(4n+4)) {
     margin-right:30px;
-        }
+    }
+.features-list-product img {
+    float: left;
+    max-width: 255px;
+    height: 322px;
+}
+.features-list-productname {
+float: left;
+margin-top: 0;
+padding: 6px 14px;
+background-color: #323232;
+color: #ffff;
+width: 203px;
+}
+.features-list-productprice {
+float: right;
+width:52px;
+padding:6px 12px;
+background-color: #8c8c8c;
+color: #ffff;
+font-size: 18px;
+line-height:32px;
+}
+.features-list-productprice a:hover,
+.features-list a:focus {
+  color: #1abc9c;
+}
+/* new news */
+.features-news { 
+    margin:0;
+    padding:0;
+    list-style: none;
+}
+.features-news-picture {
+    float: left;
+    max-width: 350px;
+    height: 262px;
+    margin-bottom: 80px;
+}
+.features-news-picture:not(:last-child) {
+margin-right: 30px;
+}
+.paragraf-one {
+/* Style for "Lorem Ipsu" */
+margin-top: 14px;
+color: #555252;
+font-family: "Open Sans - Semibold";
+font-size: 18px;
+font-weight: 600;
+line-height: 26px;
+}
+.paragraf-one::after {
+    content: "";
+    display: block;
+    margin: 14;
+    height: 3px;
+    margin-top: 27px;
+    width: 136px;
+    background-color: #4ec6ab;
+    text-align: center;
+    }
+.paragraf-two {
+    /* Style for "Nam nec te" */
+color: #555252;
+font-family: "Open Sans";
+font-size: 14px;
+font-weight: 400;
+line-height: 26px;
+/* Text style for "N, am nec" */
+}
+.readmore {
+    /* Style for "Rectangle" */
+width: 160px;
+height: 52px;
+background-color: #4ec6ab;
+margin-bottom: 82px;
+/* Style for "Read More" */
+color: #ffffff;
+font-family: "Open Sans";
+font-size: 16px;
+font-weight: 300;
+line-height: 26px;
+cursor: pointer;
+border: 0ch;
+}
