--- a/modul4/css/styles.css
+++ b/modul4/css/styles.css
@@ -93,23 +93,25 @@ background-color: #1abc9c;
     text-transform: uppercase;
     }
 .features-list-product:not(:nth-child(4n+4)) {
-    margin-right:30px;
+        margin-right:30px;
     }
-.features-list-product img {
+.features-list img {
     float: left;
     max-width: 255px;
-    height: 322px;
+    height: 320px;
 }
-.features-list-product.name {
+.features-list.name {
 float: left;
 margin-top: 0;
 padding: 6px 14px;
 background-color: #323232;
 color: #ffff;
 width: 200px;
+font-size: 18px;
+line-height:32px;
 }
-.features-list-product.price { 
-float: right;
+.features-list.price { 
+float: left;
 margin: 0;
 width:52px;
 padding:6px 12px;
@@ -118,10 +120,10 @@ color: #ffff;
 font-size: 18px;
 line-height:32px;
 }
-.features-list-product:hover .features-list-product.name {
+.features-list-product:hover .features-list.name {
   background-color: #1abc9c;
 }
-.features-list-product:hover .features-list-product.price {
+.features-list-product:hover .features-list.price {
     background-color: #1abc9c;
 }
 /* new news */
@@ -137,8 +139,8 @@ line-height:32px;
     margin-bottom: 80px;
 }
 .features-news-picture:not(:last-child) {
-margin-right: 30px;
-}
+    margin-right: 30px;
+    }
 .paragraf-one {
 /* Style for "Lorem Ipsu" */
 margin-top: 14px;
