--- a/modul4/css/styles.css
+++ b/modul4/css/styles.css
@@ -68,20 +68,25 @@ margin-bottom: 111px;
 .features-title {
 text-align: center;
 color: #515151;
-font-family: "Roboto - Black";
+font-family:'Roboto', sans-serif;
 font-size: 48px;
 font-weight: 900;
 line-height: 58px;
 margin-bottom: 98px;
 text-transform: uppercase;
+margin-top: 100px;
 }
 .features-title::after {
 content: "";
 display: block;
+margin: 0 auto;
 height: 6px;
 margin-top: 27px;
 width: 166px;
 background-color: #1abc9c;
+}
+.feature {
+    display:block;
 }
 .features-list {
     padding: 0;
@@ -91,6 +96,7 @@ background-color: #1abc9c;
     float: left;
     max-width: 255px;
     text-transform: uppercase;
+    margin-bottom: 28px;
     }
 .features-list-product:not(:nth-child(4n+4)) {
         margin-right:30px;
@@ -101,6 +107,9 @@ background-color: #1abc9c;
     height: 320px;
 }
 .features-list.name {
+margin:0;
+}
+.features-list.name {
 float: left;
 margin-top: 0;
 padding: 6px 14px;
@@ -109,6 +118,7 @@ color: #ffff;
 width: 200px;
 font-size: 18px;
 line-height:32px;
+
 }
 .features-list.price { 
 float: left;
@@ -124,7 +134,7 @@ line-height:32px;
   background-color: #1abc9c;
 }
 .features-list-product:hover .features-list.price {
-    background-color: #1abc9c;
+    background-color:#7fd9c7;
 }
 /* new news */
 .features-news { 
@@ -140,12 +150,12 @@ line-height:32px;
 }
 .features-news-picture:not(:last-child) {
     margin-right: 30px;
-    }
+}
 .paragraf-one {
 /* Style for "Lorem Ipsu" */
 margin-top: 14px;
 color: #555252;
-font-family: "Open Sans - Semibold";
+font-family: "Roboto", sans-serif;
 font-size: 18px;
 font-weight: 600;
 line-height: 26px;
@@ -153,12 +163,11 @@ line-height: 26px;
 .paragraf-one::after {
     content: "";
     display: block;
-    margin: 14;
     height: 3px;
-    margin-top: 27px;
     width: 136px;
     background-color: #4ec6ab;
     text-align: center;
+    margin-top: 11px;
     }
 .paragraf-two {
     /* Style for "Nam nec te" */
@@ -167,8 +176,8 @@ font-family: "Open Sans";
 font-size: 14px;
 font-weight: 400;
 line-height: 26px;
-/* Text style for "N, am nec" */
 }
+/* Text style for "N, am nec" */
 .readmore {
     /* Style for "Rectangle" */
 width: 160px;
@@ -181,6 +190,6 @@ font-family: "Open Sans";
 font-size: 16px;
 font-weight: 300;
 line-height: 26px;
+border-radius:5px;
 cursor: pointer;
-border: 0ch;
 }
