--- a/modul5/css/styles.css
+++ b/modul5/css/styles.css
@@ -171,6 +171,7 @@ img {
   width: 166px;
   background-color: #1abc9c;
   margin-bottom: 25px;
+  margin-top: 36px;
 }
 .new-collection {
   width: 1110px;
