--- a/modul5/css/styles.css
+++ b/modul5/css/styles.css
@@ -71,17 +71,17 @@ img {
 .slider {
   margin:0 auto;
 }
-.slider-img {
+.slider {
   position: relative;
   display: block;
-  height: 600px;
+  min-height: 600px;
   background-repeat: no-repeat;
   background-size: cover;
-  background-color: #000002;
   margin-bottom: 95px;
   background-position: center;
-  background-image: url(..img/img1.png);
+  background-image: url(../img/img1.png);
   filter: brightness(55%);
+  z-index: 1;
 }
 .slider-ctrl {
   display: inline-block;
@@ -99,6 +99,7 @@ img {
   font-weight: 700;
   cursor: pointer;
   opacity: 0.65;
+  z-index: 0;
 }
 .slider-ctrl:hover {
   opacity: 1;
@@ -108,14 +109,13 @@ img {
   background-repeat: no-repeat;
   background-image: url(../img/icons/prev.png);
   background-position: center;
-  z-index: 1;
 }
 .slider-ctrl-next {
   right: 90px;
   background-repeat: no-repeat;
   background-image: url(../img/icons/next.png);
   background-position: center;
-  z-index: 1;
+  z-index: 2;
 }
 .slider-title {
   margin: 0;
@@ -149,6 +149,7 @@ img {
    text-transform: uppercase;
    letter-spacing: -0.48px;
    color: #ffffff;
+   z-index: 3;
   }
   /* slider end */
 /* new collection */
@@ -215,6 +216,7 @@ img {
   line-height: 32px;
   text-transform: uppercase;
   text-decoration: none;
+  transition: 0.3s;
 }
 .collection-price {
   position: absolute;
@@ -230,6 +232,7 @@ img {
   font-weight: 400;
   text-decoration: none;
   color: #ffffff;
+  transition: 0.3s;
 }
 .new-collection-picture:hover .collection-name {
   background-color: #1abc9c;
@@ -253,8 +256,7 @@ img {
   opacity:1;
   background-color: rgb(0, 0,2,0.52);
 }
-.button-heart {
-  background-image: url(../img/icons/heart.png);
+.button { 
   width:50px;
   height: 50px;
   background-color: transparent;
@@ -263,46 +265,61 @@ img {
   border: 1px solid;
   border-color: #ffffff;
   cursor: pointer;
+}
+.button-heart {
+  background-image: url(../img/icons/heart.png);
   margin-top: 80px;
   margin-left: 35px;
+  width:50px;
+  height: 50px;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-position: center;
+  border: 1px solid;
+  border-color: #ffffff;
+  cursor: pointer;
+  transition:0.3s;
 }
 .new-collection-button:hover .button-heart {
-  background-color:#1abc9c;
+border: 1px solid #1abc9c;
+background-color: #1abc9c;
 }
 .button-double-line {
   background-image: url(../img/icons/double-line.png);
+  margin-top: 80px;
   width:50px;
   height: 50px;
+  background-color: transparent;
   background-repeat: no-repeat;
   background-position: center;
-  border: 0;
+  border: 1px solid;
   border-color: #ffffff;
   cursor: pointer;
-  border: 1px solid #ffffff;
-  background-color: transparent;
-  margin-top: 80px;
+  transition:0.3s;
 }
 .new-collection-button:hover .button-double-line {
-  background-color:#1abc9c;
-}
+  border: 1px solid #1abc9c;
+  background-color: #1abc9c;
+  }
 .button-clock {
   background-image:url(../img/icons/clock.png); 
   width:50px;
   height: 50px;
+  background-color: transparent;
   background-repeat: no-repeat;
   background-position: center;
+  border: 1px solid;
   border-color: #ffffff;
-  border: 0;
-  background-color: transparent;
-  border: 1px solid #ffffff;
   cursor: pointer;
+  transition:0.3s;
 }
 .new-collection-button:hover .button-clock {
-  background-color:#1abc9c;
-}
+  border: 1px solid #1abc9c;
+  background-color: #1abc9c;
+  }
 .button-cart {
  background-image:url(../img/icons/cart.png); 
- width:166px;
+ width:160px;
  height: 50px;
  background-color: #323232;
  background-repeat: no-repeat;
@@ -315,8 +332,12 @@ img {
  border-color: #ffffff;
  padding-left: 30px;
  vertical-align: middle;
+ transition:0.3s;
 }
-
+.new-collection-button:hover .button-cart {
+  border: 1px solid #1abc9c;
+  background-color: #1abc9c;
+}
 .footer {
   margin: 0 auto;
   background-color: #323232;
