--- a/modul5/css/styles.css
+++ b/modul5/css/styles.css
@@ -81,8 +81,14 @@ img {
   background-position: center;
   background-image: url(../img/img1.png);
   filter: brightness(55%);
-  z-index: 1;
 }
+.slider--inner {
+  position: relative;
+  z-index: 3;
+  padding: 200px 0px; 
+  color:#ffffff; 
+  margin: 0 auto;
+}     
 .slider-ctrl {
   display: inline-block;
   position: absolute;
@@ -99,7 +105,6 @@ img {
   font-weight: 700;
   cursor: pointer;
   opacity: 0.65;
-  z-index: 0;
 }
 .slider-ctrl:hover {
   opacity: 1;
@@ -115,7 +120,6 @@ img {
   background-repeat: no-repeat;
   background-image: url(../img/icons/next.png);
   background-position: center;
-  z-index: 2;
 }
 .slider-title {
   margin: 0;
@@ -149,7 +153,6 @@ img {
    text-transform: uppercase;
    letter-spacing: -0.48px;
    color: #ffffff;
-   z-index: 3;
   }
   /* slider end */
 /* new collection */
