--- a/modul5/css/styles.css
+++ b/modul5/css/styles.css
@@ -26,6 +26,9 @@ img {
     content: '';
     clear: both;
 }
+.basic {
+  background-color: #eaf0fd
+}
   /* My header*/
 .page-header {
     margin-top: 38px;
@@ -74,16 +77,20 @@ img {
  position: absolute;
  content: "";
  display: block;
+ width: 100%;
+ height: 100%;
  background-repeat: no-repeat;
  background-size: cover;
 background-position: center;
 background-image: url(../img/img1.png);
  z-index: 0;
+ top: 0;
+ left: 0;
 }
 .slider--inner {
 position: relative;
 padding: 200px 0px; 
-  margin: 0 auto;
+margin: 0 px;
 z-index: 1;
 }
 .slider-ctrl {
@@ -128,6 +135,7 @@ z-index: 1;
   font-size: 60px;
   font-weight: 900;
   text-transform: uppercase;
+  transform: translate(30%);
 }
 .slider-text {
 /* Text style for "PARIS TOUR" */
@@ -140,6 +148,7 @@ z-index: 1;
    text-transform: uppercase;
    letter-spacing: -0.48px;
    color: #ffffff;
+   transform: translate(30%);
   }
   /* slider end */
 /* new collection */
@@ -152,7 +161,7 @@ z-index: 1;
   line-height: 58x;
   text-transform: uppercase;
   text-align: center;
-  margin-top: 0;
+  margin-top: 100px;
   margin-bottom: 80px;
 }
 .new-collection-title::after{
@@ -246,16 +255,6 @@ z-index: 1;
   opacity:1;
   background-color: rgb(0, 0,2,0.52);
 }
-.button { 
-  width:50px;
-  height: 50px;
-  background-color: transparent;
-  background-repeat: no-repeat;
-  background-position: center;
-  border: 1px solid;
-  border-color: #ffffff;
-  cursor: pointer;
-}
 .button-heart {
   background-image: url(../img/icons/heart.png);
   margin-top: 80px;
@@ -270,9 +269,10 @@ z-index: 1;
   cursor: pointer;
   transition:0.3s;
 }
-.new-collection-button:hover .button-heart {
-border: 1px solid #1abc9c;
-background-color: #1abc9c;
+.button-heart:hover  {
+  opacity: 1;    
+  background-color:#1abc9c; 
+  border: 1px solid #1abc9c;
 }
 .button-double-line {
   background-image: url(../img/icons/double-line.png);
@@ -287,9 +287,10 @@ background-color: #1abc9c;
   cursor: pointer;
   transition:0.3s;
 }
-.new-collection-button:hover .button-double-line {
+.button-double-line:hover {
+  opacity: 1;  
+  background-color:#1abc9c;
   border: 1px solid #1abc9c;
-  background-color: #1abc9c;
   }
 .button-clock {
   background-image:url(../img/icons/clock.png); 
@@ -303,9 +304,10 @@ background-color: #1abc9c;
   cursor: pointer;
   transition:0.3s;
 }
-.new-collection-button:hover .button-clock {
+.button-clock:hover  {
+  opacity: 1;  
+  background-color:#1abc9c;
   border: 1px solid #1abc9c;
-  background-color: #1abc9c;
   }
 .button-cart {
  background-image:url(../img/icons/cart.png); 
@@ -324,9 +326,10 @@ background-color: #1abc9c;
  vertical-align: middle;
  transition:0.3s;
 }
-.new-collection-button:hover .button-cart {
+.button-cart:hover  {
+  opacity: 1;    
+  background-color:#1abc9c; 
   border: 1px solid #1abc9c;
-  background-color: #1abc9c;
 }
 .footer {
   margin: 0 auto;
