--- a/modul5/css/styles.css
+++ b/modul5/css/styles.css
@@ -87,6 +87,18 @@ background-image: url(../img/img1.png);
  top: 0;
  left: 0;
 }
+.slider::after {
+ position: absolute;
+ content: "";
+ display: block;
+ width: 100%;
+ height: 100%;
+ background: rgb(0, 0,2,0.52);
+ z-index: 0;
+ top: 0;
+ left: 0;
+}
+
 .slider--inner {
 position: relative;
 padding: 200px 0px; 
@@ -118,12 +130,14 @@ z-index: 1;
   background-repeat: no-repeat;
   background-image: url(../img/icons/prev.png);
   background-position: center;
+  z-index: 1;
 }
 .slider-ctrl-next {
   right: 90px;
   background-repeat: no-repeat;
   background-image: url(../img/icons/next.png);
   background-position: center;
+  z-index: 1;
 }
 .slider-title {
   margin: 0;
