--- a/modul8/css/styles.css
+++ b/modul8/css/styles.css
@@ -84,16 +84,11 @@ input[type="”radio”"].visually-hidden {
   text-decoration: none;
   text-align: center;
 }
-.navigation-variation:hover{
+.navigation-variation:hover, focus {
   border: 3px solid #ffffff;
   border-radius: 30px;
   transition: 0.3s
 } 
-.a-focus:focus {
-  border: 3px solid #ffffff;
-  border-radius: 30px;
-  transition: 0.3s     
-}
 .site-logo {
 /* Style for "URLAUBSGLÜ" */
   display:inline-block;
@@ -232,64 +227,64 @@ input[type="”radio”"].visually-hidden {
   display: block;
 }
 @media (min-width: 768px) {
-.page-header {
-  height: 700px;
-  background-size: cover;
-}
-.container {
-  width: 660px;
-  flex-direction: row;
-  justify-content: space-between;
-  margin: 0 auto;
-}
-.site-logo {
-  margin: 38px 0 0 0;
-  justify-items: center;
-  padding: 8px 0;
-  order: unset;
-}
-.site-navigation {
-  margin: 38px;
-  padding:0;
-  margin-bottom: 160px;
-}
-.navigation-variation {
-  margin: 0;
-  padding: 8px 0;
-}
-.title {
-  margin-top: 160px;
-  font-size: 52px;
-  width: 504px;
-  margin: 0 auto;
-  margin-top:40px;
-}
-.text {
-  font-size: 24px;
-  margin-top: 30px;
-}
-.header-button {
-  margin-top: 35px;
-  width: 224px;
-  margin-bottom: 234px;
-}
-.team-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  width: 492px;
-  margin: 0 auto 38px;
-}
-.contact-button {
-  margin-bottom: 40px;
-  width: 192px;
-}
+  .page-header {
+    height: 700px;
+     background-size: cover;
+   }
+  .container {
+    width: 660px;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0 auto;
+  }
+  .site-logo { 
+    margin: 38px 0 0 0;
+    justify-items: center;
+    padding: 8px 0;
+    order: unset;
+  }
+  .site-navigation {
+    margin: 38px;
+    padding:0;
+    margin-bottom: 160px;
+  }
+  .navigation-variation {
+    margin: 0;
+    padding: 8px 0;
+  }
+  .title {
+    margin-top: 160px;
+    font-size: 52px;
+    width: 504px;
+    margin: 0 auto;
+    margin-top:40px;
+   }
+  .text {
+    font-size: 24px;
+    margin-top: 30px;
+  }
+  .header-button {
+    margin-top: 35px;
+    width: 224px;
+    margin-bottom: 234px;
+   }
+  .team-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 492px;
+    margin: 0 auto 38px;
+  }
+  .contact-button {
+    margin-bottom: 40px;
+    width: 192px;
+  }
 @media (min-width: 1440px) {
-.container {
- width: 940px;
- padding: 0;
-}
-.team-list {
- width: 940px;
-}
-}
+  .container {
+    width: 940px;
+    padding: 0;
+  }
+  .team-list {
+   width: 940px;
+  }
+  }
