--- a/modul8/css/styles.css
+++ b/modul8/css/styles.css
@@ -84,9 +84,13 @@ input[type="”radio”"].visually-hidden {
   text-decoration: none;
   text-align: center;
 }
-.navigation-variation:hover, focus {
-  border: 3px solid #ffffff;
-  border-radius: 30px;
+.navigation-variation{
+  border-radius: 100px 100px 100px 100px;
+  border: 2px solid transparent;
+  padding: 10px 18px;
+}
+.navigation-variation:hover{
+  border-color: #ffffff;
   transition: 0.3s
 } 
 .site-logo {
