--- a/modul8/css/styles.css
+++ b/modul8/css/styles.css
@@ -79,14 +79,16 @@ input[type="”radio”"].visually-hidden {
   font-size: 14px;
   font-weight: 700;
   color: #ffffff;
-  padding: 8px 0;
   text-decoration: none;
   text-align: center;
 }
 .navigation-variation{
   border-radius: 100px 100px 100px 100px;
   border: 2px solid transparent;
-  padding: 10px 18px;
+  padding: 12px 18px;
+  width: 90px;
+  height: 36px;
+  
 }
 .navigation-variation:hover{
   border-color: #ffffff;
