--- a/modul9/css/styles.css
+++ b/modul9/css/styles.css
@@ -139,6 +139,7 @@ input[type="”radio”"].visually-hidden {
      border: transparent;
      text-decoration: none;
      text-align: center;
+     padding-top: 10px;
 }
 .partners-title {
     text-align: center;
@@ -267,6 +268,7 @@ input[type="”radio”"].visually-hidden {
       margin-top: 35px;
       width: 224px;
       margin-bottom: 234px;
+      padding-top:10px;
      }
     .team-list {
       display: flex;
