--- a/modul9/css/styles.css
+++ b/modul9/css/styles.css
@@ -128,6 +128,7 @@ input[type="”radio”"].visually-hidden {
 }
 .header-button {
     /* Style for "Rectangle" */
+    width: 300px;
      height: 40px;
      background-color: #ff4e50;
      margin-top: 30px;
@@ -139,7 +140,7 @@ input[type="”radio”"].visually-hidden {
      border: transparent;
      text-decoration: none;
      text-align: center;
-     padding-top: 10px;
+     
 }
 .partners-title {
     text-align: center;
@@ -232,11 +233,7 @@ input[type="”radio”"].visually-hidden {
       height: 700px;
       background-size: cover;
     }
-    .container {
-      flex-direction: row;
-      justify-content: space-between;
-      margin: 0 auto;
-    }
+   
     .site-logo { 
       margin: 38px 0 0 0;
       justify-items: center;
@@ -244,7 +241,7 @@ input[type="”radio”"].visually-hidden {
       order: unset;
     }
     .site-navigation {
-      margin-top: 20px;
+      margin: 28px;
       padding:0;
       margin-bottom: 160px;
     }
@@ -262,12 +259,16 @@ input[type="”radio”"].visually-hidden {
     .text {
       font-size: 24px;
       margin-top: 30px;
+      margin-bottom: 35px;
     }
     .header-button {
-      margin-top: 35px;
-      width: 224px;
+      margin-top: 40px;
       margin-bottom: 234px;
-      padding-top:10px;
+      padding-top:14px;
+      padding-bottom: 14px;
+      padding-left: 25px;
+      padding-right: 25px;
+      margin-bottom: 235px;
      }
     .team-list {
       display: flex;
@@ -278,6 +279,10 @@ input[type="”radio”"].visually-hidden {
     .contact-button {
       margin-bottom: 40px;
       width: 192px;
+    }
+    .list-name {
+    left: 80px;
+    margin-right: 0;
     }
   @media (min-width: 1440px) {
 }
