--- a/modul10/css/styles.css
+++ b/modul10/css/styles.css
@@ -288,6 +288,8 @@ img {
 }
 .team-icons {
    position: absolute;
+   display: -webkit-box;
+  display: -ms-flexbox;
    display: flex;
    list-style: none;
    padding: 0;
@@ -297,10 +299,15 @@ img {
    cursor: pointer;
    top: 35%;
    margin-left: 70px;
+   -webkit-box-pack: justify;
+   -ms-flex-pack: justify;
    justify-content: space-between;
    transition: 0.2s linear;
    opacity: 0;
    z-index:3;
+   fill: #f38181;
+   width: 26px;
+   height: 26px;
   }
 .member-img:hover.team-icons {
   opacity: 1;
