--- a/modul10/css/styles.css
+++ b/modul10/css/styles.css
@@ -308,8 +308,6 @@ img {
   }
 .member-img:hover.team-icons {
   opacity: 1;
-  background-color: #f38181;
-  fill: #ffffff;
   }
 .team-icons__internet {
    width: 56px;
@@ -321,7 +319,11 @@ img {
    z-index: 2;
    fill:#f38181;
 }
-
+.team-icons__link svg {
+    width: 26px;
+    height: 21px;
+    fill: #f38181;
+}
 .internet:hover {   
    background-color:#95e1d3; 
    opacity: 1;
