--- a/modul10/css/styles.css
+++ b/modul10/css/styles.css
@@ -311,7 +311,7 @@ img {
    fill:#f38181;
    padding-left: 15px;
    padding-right: 15px;
-   padding-top: 15px;
+   padding-bottom: 15px;
    padding-bottom: 15px;
 }
 .team-icons__internet:hover {   
