--- a/modul10/css/styles.css
+++ b/modul10/css/styles.css
@@ -100,6 +100,11 @@ img {
  fill: #ffffff; 
  color: #ffffff; 
 }
+.site-navigation__list-icon:hover {
+    border-bottom: 3px solid #fce38a;
+    color: #fce38a;
+    fill: #fce38a;
+}
   /* my header end*/
 .title {
     width: 840px;
