--- a/modul11/src/sass/base.scss
+++ b/modul11/src/sass/base.scss
@@ -1,11 +1,14 @@
 html {
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;  box-sizing: border-box;
- *,
- *::before,
- *::after {
+  box-sizing: border-box;
+}
+ 
+*,
+*::before,
+*::after {
   box-sizing: inherit;
 }
+
 
 //   body {
 //     font-family: $main-font-stack;
