--- a/modul11/src/sass/components/team.scss
+++ b/modul11/src/sass/components/team.scss
@@ -95,7 +95,7 @@
   padding-top: 15px;
 }
 
-&:hover .team-icons__internet {   
+:hover .team-icons__internet {   
   background-color: #f38181; 
   fill:#ffffff;
   opacity: 1;
