--- a/modul11/src/sass/components/header-button.scss
+++ b/modul11/src/sass/components/header-button.scss
@@ -15,4 +15,6 @@
   background-color: Transparent;
   background-repeat: no-repeat;
   cursor: pointer;
+  margin-top: 124px;
+  scroll-margin-bottom: 230px;
 }
