--- a/modul11/src/sass/components/page-header.scss
+++ b/modul11/src/sass/components/page-header.scss
@@ -3,10 +3,10 @@
   min-height: 1000px;
   background-position: center;
   background-size: cover;
-  background-image: linear-gradient(to top, rgba(252, 227, 138, 0.9) 0%, rgba(243, 129, 129, 0.9) 100%), url(../img/background.png);
+  background-image: linear-gradient(to top, rgba(252, 227, 138, 0.9) 0%, rgba(243, 129, 129, 0.9) 100%), url(../images/background.png);
   
   @media (min-resolution: 192dpi), (min-resolution: 2dppx) {
-    background-image: linear-gradient(to top, rgba(252, 227, 138, 0.9) 0%, rgba(243, 129, 129, 0.9) 100%),url(../img/background@2x.png);
+    background-image: linear-gradient(to top, rgba(252, 227, 138, 0.9) 0%, rgba(243, 129, 129, 0.9) 100%),url(../imagesg/background@2x.png);
   }
 }
 
