--- a/modul11/src/sass/components/service-section.scss
+++ b/modul11/src/sass/components/service-section.scss
@@ -15,6 +15,7 @@
   margin: 0;
   color: $secondary-dark-color;
   margin-bottom: 65px;
+  text-transform: uppercase;
 
   &::after {
     content: '';
@@ -23,6 +24,7 @@
     height: 3px;
     background-color: #f38181;
     margin: 42px auto 0;
+    margin-bottom: 56px;
   }
 }
 
